--- a/web/templates/exp06.html
+++ b/web/templates/exp06.html
@@ -108,6 +108,7 @@
                                                 </div>
                                             </div>
                                             <p>按照个体公平性要求，相似样本（基于[[ dx_measure ]]距离的差异≤[[ parameter_c ]]）的分类结果应当相同。而上述两样本差异为[[ unfair_pair_judge.fair_data.dx ]]，且模型对其分类结果不同。因而认定模型对这对样本的分类结果不公平。</p>
+                                            <p>模型优化建议：建议在不公平样本附近采样得到一批样本，并将这些样本加入模型的训练数据集对模型参数进行微调。该优化可以在几乎不影响模型总体准确性表现的情况下改善模型公平性。</p>
                                             <!-- <p>经进一步审计,该对样本附近,模型的个体公平性为[[ old_individual_fairness
                                                 ]]，低于模型在总体数据上的公平性表现[[ globalFairness ]]</p>
 
