--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -55,7 +55,7 @@
                                         <p>人工智能模型已经广泛参与人类的生活，例如一些模型可以依据人的特征，判断求职者是否符合要求，或判断贷款申请者是否可以获得贷款。可以说，<b>人工智能模型的判别结果已经与人类的权益息息相关</b>。然而我们是否可以真的信任这些模型左右权益的分配？模型的判别结果<b>是否公平</b>？模型之中是否潜藏着对特定人等的<b>歧视</b>？</p>
                                         <p>针对上述疑问，我们设计了一种对模型公平性审计的框架，希望能够证实并定位模型中存在的对特定个体的歧视现象。该审计框架<b>规定了审计人员实施公平性审计的基本流程</b>，同时，框架中整合了基于模型黑盒访问<b>自动化算法</b>以辅助审计人员更好地定位歧视现象现象。</p>
                                         <div class="red">
-                                            <p>在本次实验中，您将扮演<b>审计人员</b>的角色，使用上述框架对我们提供的模型进行审计。</p>
+                                            <p>在本次实验中，您将扮演<b>审计人员</b>的角色，使用上述框架对我们提供的模型进行审计，审计框架共分为4个步骤。</p>
                                             <p>在实验过程中，您可以随时没有顾虑的提出任何关于实验设置、实验过程等方面的问题，我们期待得到您在实验过程中的任何反馈。</p>
                                         </div>
                                     </div>
@@ -117,7 +117,7 @@
                                     <el-radio-group v-model="form.gender">
                                     <el-radio :label="0">男</el-radio>
                                     <el-radio :label="1">女</el-radio>
-                                    <el-radio :label="2">未知</el-radio>
+                                    <el-radio :label="2">不愿透露</el-radio>
                                     </el-radio-group>
                                 </el-form-item>
 
@@ -126,7 +126,7 @@
                                 </el-form-item>
 
 
-                                <el-form-item label="此前是否接触过人工智能系统（推荐、检索等）" prop="isKnowAI">
+                                <el-form-item label="此前是否接触过人工智能系统（大模型、推荐提供、检索系统等）" prop="isKnowAI">
                                     <el-radio-group v-model="form.isKnowAI">
                                     <el-radio label="1" :value="1">是</el-radio>
                                     <el-radio label="0" :value="0">否</el-radio>
