--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -243,7 +243,7 @@
                         if(valid){  // 当判定成功时，进行提交操作
                             // alert('submit!');
                             console.log(this.form);
-                            axios.post('http://localhost:8000/api/users/',this.form).then(response =>{
+                            axios.post('/api/users/',this.form).then(response =>{
 
                                 this.$message.success('用户创建成功')
                             }).catch(error=>{
